{
    "name": "MyControls",
    "maps": [
        {
            "name": "PlayerDD",
            "id": "91e34a32-1707-46c3-b312-e61635dc73d8",
            "actions": [
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "60dafc0a-7ae4-4ce7-927c-27af1ff90fc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "2cfbfbe9-2849-4eeb-9c82-674114e28cf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "ac09a57b-24fb-41d7-a451-ae04d44649aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill4",
                    "type": "Button",
                    "id": "6eb0ad7b-294e-45c7-b089-ca8fa883f172",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightShoulder",
                    "type": "Value",
                    "id": "8b9ece33-0b34-486f-a8eb-9192a50146b6",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftShoulder",
                    "type": "Value",
                    "id": "8a139e11-fb2f-4436-8da2-38d91f84e464",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "826230e0-ea6d-4a56-b29d-33f717f0cc7d",
                    "path": "<DualSenseGamepadHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d0eec31-ae45-45be-8e1c-68a924707381",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3309bec0-5fc3-40ec-bb50-d389e804022d",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81602fa5-6046-42ad-8cb2-04a93a61c310",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c69cf71-483d-4df6-a29a-4cb0f545c44c",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e7154d0-6da5-4714-81eb-a84a89405268",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerBuff",
            "id": "601ff3d8-6ca8-4745-a3b6-01a3a25caf79",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "f895cc90-d7a4-440b-9ac5-a1e3f8c46b42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0299d4d1-de76-4d05-a0f5-f23133963961",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "c4bab06e-20a1-45a5-8f96-581eab2c8cc7",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e910ccf5-53b2-41a4-8b3f-4f30dae1a676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f6bf9da2-d818-43ea-8094-8b7206d570d0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Splash",
            "id": "cf243a72-00b0-44f0-b336-e18288499168",
            "actions": [
                {
                    "name": "TriClick",
                    "type": "Button",
                    "id": "3ce0281f-a32c-4ff8-b285-dd4a3814c885",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d13cdbb2-0ed6-4000-8c31-3b0723f3d3a2",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controls",
            "bindingGroup": "Controls",
            "devices": [
                {
                    "devicePath": "<DualSenseGampadiOS>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}